# HW6-HMM

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
hmm/: __init__.py  hmm.py
test/: test_hmm.py
