[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "hmm"
version = "0.2.5"
authors = ["Abolfazl Arab <abolfazl.arab@ucsf.edu>", "Shu Zhang <shu.zhang2@ucsf.edu>"]
readme = "README.md"
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2"
numpy = "^1.19"

[tool.poetry.urls]
homepage = "https://github.com/abearab/HW6-HMM"